test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/incomplete_array_element.plx
type struc s;

#  can't specify an array type whose element type is incomplete
#  even if the type is completed later
pub arr: [3]struc s;

type struc s(    a: i32    , b: i32    
    )

pub fn main(none) i32 {
    return 0
}
